samples/_failures_safe/1761457941_6007ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25fc127d.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_25fc127d.c:125:9: error: expected declaration or statement at end of input
  125 |         double sub_det = matrix_determinant(&sub);
      |         ^~~~~~
./samples/SAFE/__tmp_25fc127d.c:125:9: error: expected declaration or statement at end of input
